--- a/gb/19/4/21/n11203188.md
+++ b/gb/19/4/21/n11203188.md
@@ -15,35 +15,33 @@
 <p>在这次体育总局的权斗中，体总局长苟仲文入选中共十九大代表，晋升为中共第十九届中央委员；而蔡振华于2018年9月初，突然被调离体育总局，到中华全国总工会副主席。</p>
 <p>中国“国乒兵变”后，令国乒元气大伤，此后的多场重要比赛中遭到惨败。去年12月1日，刘国梁当选新一届乒协主席。这意味着下课一年多的刘国梁从新入主国乒。受此事件牵连而下课的秦志戬、马琳，也再度跟随刘国梁回到国乒执教。</p>
 <p>责任编辑：林诗远</p>
-	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/17/6/25/n9304923.md#1">原总教练发声 分析：撤刘国梁或涉十九大权斗</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/17/6/28/n9329419.md#1">刘国梁事件惊动常委 苟仲文缺席紧急会议</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/10/n9717672.md#1">刘国梁继任者现身 其任职打破乒协“行规”</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/7/n9814670.md#1">刘国梁和王楠夫妇结盟地产商 拟建体育小镇</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/10/n2962557.md#1" target="_blank">鲜为人知的马克思之二：自大的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/26/n9771543.md#1" target="_blank">中共抹黑李洪志先生“敛财”真相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/22/n10239833.md#1" target="_blank">袁斌：重温“革命烈士”夏明翰的《就义诗》（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/16/n11525726.md#1" target="_blank">密州狂欢节 市长：法轮大法给世界带来美好</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418840.md#1">整个时代映现于她一身：无名女子们的肖像</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/5/n14174106.md#1">围炉过年：从除夕到元日的民俗守护人心中的善</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406436.md#1">古代的中国人是如何过年的？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/27/n14422898.md#1">【未解之谜】2025预言盘点——加州大火深度解析</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421709.md#1">【未解之谜】皮行者牧场（二）：神秘的隐形人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14425072.md#1">【环球直击】美国土安全部部长赴纽约逮捕非法移民</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14424349.md#1">【秦鹏观察】蛇始蛇终 中南海红潮大戏近平</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14424510.md#1">【新闻大家谈】2025年景有变？年轻人如何过年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14424072.md#1">俄罗斯严查中欧班列 上千中国货柜被扣留</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14423789.md#1">DeepSeek宣称低成本惹议 业界疑背后有猫腻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14424030.md#1">袁红冰：川普效应突显 中国酝酿反独裁运动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/27/n14423689.md#1">欲返洛杉矶拍《玩命关头11》 迪索望挽救经济</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14424024.md#1">《超人》预告片场景太假 导演冈恩回应100%真实</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14424273.md#1">央视春晚主持人妆容大翻车 撒贝宁浓眉遭吐槽</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/27/n14423585.md#1">曾因抑郁症停工一年 王嘉尔录节目胸痛急送医</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14425139.md#1">机器人春晚扭秧歌“露馅” 退场时脚步直哆嗦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422307.md#1">研究人员在饮用水中发现未知化学物质</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420263.md#1">补充三种维生素  或增加罹癌风险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/26/n14422219.md#1">睡觉穿袜子的利与弊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421363.md#1">亲子间的金钱关系：感恩你愿与我分享财富</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/28/n14423713.md#1">冻龄抗癌抗抑郁 跳舞让人彻底摆脱抗癫痫药</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652050.md#1">【直播】听证会：中共在拉丁美洲的组织犯罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/4/21/n11203188.htm">刘国梁首度回应卸任总教练 肯定有点委屈</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/19/4/21/n11203188.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
